# Yavanna

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: CI.yml
misc/: yavanna.desktop
src/: main.rs
src/core/: error.rs  mod.rs  sleep.rs
src/ui/: front.rs  gtk_front.rs  iced_front.rs  mod.rs
