[package]
name = "yavanna"
version = "0.4.0"
authors = ["Jordan <jordan@raboland.fr>"]
edition = "2018"

[features]
default = ["iced_f"]
gtk_f = ["gtk", "gio"]
iced_f = ["iced"]

[dependencies.iced]
version = "0.1.1"
optional = true

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]
optional = true


[dependencies.gio]
version = ""
features = ["v2_44"]
optional = true
